--- a/src/stories/Page.mdx
+++ b/src/stories/Page.mdx
@@ -1,5 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
-import { ArgTypes } from '@storybook/addon-docs/blocks';
+import { ArgTypes, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import * as PageStories from './Page.stories';
 
 <Meta of={PageStories} />
@@ -19,12 +18,19 @@ The Page component represents a typical application page that includes navigatio
 ## States
 
 ### Logged Out State
+
 <Canvas of={PageStories.LoggedOut} />
 
 ### Logged In State
+
 <Canvas of={PageStories.LoggedIn} />
 
+### With Storybook Content
+
+<Canvas of={PageStories.WithStorybookContent} />
+
 ## Props
+
 <ArgTypes of={PageStories.LoggedOut} />
 
 ## Usage Examples
@@ -33,7 +39,16 @@ The Page component represents a typical application page that includes navigatio
 import { Page } from './Page';
 
 // Simple usage - component manages its own state
-<Page />
+<Page />;
+```
+
+```jsx
+import { Page, StorybookContent } from './Page';
+
+// With custom content
+<Page>
+  <StorybookContent />
+</Page>;
 ```
 
 ## Interaction Testing
@@ -53,6 +68,7 @@ export const LoggedIn = {
 ```
 
 This test:
+
 1. Finds the login button using accessibility role and text
 2. Simulates a user click
 3. Verifies the interaction works as expected
